tests/ui/borrowck/alias-liveness/name-region.stderr
error[E0310]: the associated type `<T as AnotherTrait>::Ty2<'_>` may not live long enough
  --> $DIR/name-region.rs:9:12
   |
LL |     let _: &'static T::Ty2<'_>;
   |            ^^^^^^^^^^^^^^^^^^^
   |            |
   |            the associated type `<T as AnotherTrait>::Ty2<'_>` must be valid for the static lifetime...
   |            ...so that the type `<T as AnotherTrait>::Ty2<'_>` will meet its required lifetime bounds
   |
   = help: consider adding an explicit lifetime bound `<T as AnotherTrait>::Ty2<'_>: 'static`...

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
